formatting, minor edits

--- a/training/Caching.qmd
+++ b/training/Caching.qmd
@@ -33,9 +33,9 @@ knitr::opts_chunk$set(eval = hasSuggests && useSuggests)
 See [Barebones R script] for the code shown in this chapter
 :::
 
-The objective of a reproducible workflow is likely that an entire work
+The objective of a reproducible workflow is likely that the entire work
 flow from raw data to publication, decision support, report writing,
-presentation building etc., could be built and be reproducible anywhere,
+presentation building etc., can be built and be reproducible anywhere,
 on any computer and operating system, with any starting conditions, on
 demand.
 
@@ -47,6 +47,7 @@ benefits.
 
 1.  Each line gets run regularly so when failures crop up, they are
     detected quickly and can be fixed when they are introduced.
+
 2.  Running code "somewhere else" (different machine, person, operating
     system) will be more likely to work on an ongoing basis, i.e., it
     will help maintain a "reproducible" state.
@@ -55,7 +56,7 @@ These benefits allow code to be constantly in a state of functioning,
 from start to finish, which lowers the effort "at the end" to make all
 the work reproducible.
 
-The `reproducible::Cache` function is built to work with many R
+The `reproducible::Cache()` function is built to work with many R
 functions, including *some* that are used for their side effects or that
 use pointers (e.g., a `terra` `SpatRaster`) instead of regular R
 objects.
@@ -92,6 +93,7 @@ timings.
 library(terra)
 tmpDir <- file.path(tempdir(), "reproducible_examples", "Cache")
 dir.create(tmpDir, recursive = TRUE)
+
 x <- y <- 2001
 ras <- terra::rast(terra::ext(0, x, 0, y), vals = sample(1:(x*y)), res = 1)
 terra::crs(ras) <- "+proj=lcc +lat_1=48 +lat_2=33 +lon_0=-100 +datum=WGS84"
@@ -228,12 +230,14 @@ Some of our team regularly add:
 3.  If using SpaDES, use cache at the event level, if the event is
     non-stochastic
 
-4. Don't cache a `simInit` call -- instead implement internal caching in the modules
-   and use event caching. See [`vignette(topic = "iii-cache", package = "SpaDES.core")`](https://rdrr.io/cran/SpaDES.core/f/vignettes/iii-cache.Rmd)
-   
+4.  Don't cache a `simInit` call -- instead implement internal caching
+    in the modules and use event caching. See
+    [`vignette(topic = "iii-cache", package = "SpaDES.core")`](https://rdrr.io/cran/SpaDES.core/f/vignettes/iii-cache.Rmd)
+
 ## See also
 
-[`SpaDES.core` vignette on caching](https://rdrr.io/cran/SpaDES.core/f/vignettes/iii-cache.Rmd)
+[`SpaDES.core` vignette on
+caching](https://rdrr.io/cran/SpaDES.core/f/vignettes/iii-cache.Rmd)
 
 ## Barebones R script
 
