--- a/training/references/references.bib
+++ b/training/references/references.bib
@@ -55,3 +55,74 @@
 	year = {2015},
 	date = {2015}
 }
+
+
+
+@article{mcintire2022,
+	title = {PERFICT: A Re-imagined foundation for predictive ecology},
+	author = {McIntire, Eliot J. B. and Chubaty, Alex M. and Cumming, Steven G. and Andison, Dave and Barros, Ceres and Boisvenue, {Céline} and {Haché}, Samuel and Luo, Yong and Micheletti, Tatiane and Stewart, Frances E. C.},
+	year = {2022},
+	date = {2022},
+	journal = {Ecology Letters},
+	pages = {1345--1351},
+	volume = {25},
+	number = {6},
+	doi = {10.1111/ele.13994},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ele.13994},
+	note = {13 citations (Crossref) [2024-05-15]
+10 citations (Semantic Scholar/DOI) [2023-09-19]
+{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ele.13994},
+	langid = {en}
+}
+
+@article{reynolds1997,
+	title = {Modularity and genericness in plant and ecosystem models},
+	author = {Reynolds, James F. and Acock, Basil},
+	year = {1997},
+	date = {1997},
+	journal = {Ecological Modelling},
+	pages = {7--16},
+	volume = {94},
+	number = {1},
+	doi = {10.1016/S0304-3800(96)01924-2},
+	url = {http://www.sciencedirect.com/science/article/pii/S0304380096019242},
+	note = {bibtex: Reynolds:1997em}
+}
+
+@article{janssen2020,
+	title = {On code sharing and model documentation of published individual and agent-based models},
+	author = {Janssen, Marco A. and Pritchard, Calvin and Lee, Allen},
+	year = {2020},
+	month = {12},
+	date = {2020-12-01},
+	journal = {Environmental Modelling & Software},
+	pages = {104873},
+	volume = {134},
+	doi = {10.1016/j.envsoft.2020.104873},
+	url = {https://www.sciencedirect.com/science/article/pii/S1364815220309300}
+}
+
+@article{sharma2023,
+	title = {Analytical code sharing practices in biomedical research},
+	author = {Sharma, Nitesh Kumar and Ayyala, Ram and Deshpande, Dhrithi and Patel, Yesha M and Munteanu, Viorel and Ciorba, Dumitru and Fiscutean, Andrada and Vahed, Mohammad and Sarkar, Aditya and Guo, Ruiwei and Moore, Andrew and Darci-Maher, Nicholas and Nogoy, Nicole A and Abedalthagafi, Malak S. and Mangul, Serghei},
+	year = {2023},
+	month = {08},
+	date = {2023-08-07},
+	journal = {bioRxiv},
+	pages = {2023.07.31.551384},
+	doi = {10.1101/2023.07.31.551384},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10441317/},
+	note = {PMID: 37609176
+PMCID: PMC10441317}
+}
+
+@article{mcintire2022,
+	title = {PERFICT: a Re-imagined Foundation for Predictive Ecology},
+	author = {McIntire, Eliot J. B. and Chubaty, Alex and Cumming, Steve and Andison, David and Barros, Ceres and Boisvenue, {Céline} and Hache, Samuel and Luo, Yong and Micheletti, Tatiane and Stewart, Frances},
+	year = {2022},
+	date = {2022},
+	journal = {Ecology Letters},
+	doi = {10.22541/au.163252535.52485317/v1},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/ele.13994},
+	note = {DOI: 10.22541/au.163252535.52485317/v1}
+}
