--- a/training/ContinuousWorkflows.qmd
+++ b/training/ContinuousWorkflows.qmd
@@ -12,7 +12,7 @@ warning: false
 message: false
 error: false
 cache: false
-bibliography: references.bib
+bibliography: references/references.bib
 ---
 
 # Working with Continuous Workflows {#sec-continuousWorkflows}
